--- a/nextcloud-ingress.yaml.example
+++ b/nextcloud-ingress.yaml.example
@@ -2,6 +2,10 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: nextcloud-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    cert-manager.io/acme-challenge-type: http01
 spec:
   tls:
   - hosts: 
