Use nextcloud as sql db and sql user

--- a/mariadb-secrets.yaml.example
+++ b/mariadb-secrets.yaml.example
@@ -4,7 +4,7 @@ metadata:
   name: mariadb-secrets
 type: Opaque
 data:
-  MYSQL_DATABASE: <password> #nextcloud
-  MYSQL_USER: <password>     #nextcloud
+  MYSQL_DATABASE: bmV4dGNsb3Vk 
+  MYSQL_USER: bmV4dGNsb3Vk 
   MYSQL_PASSWORD: <base64-encoded-password>        #manually generated with pwgen 
   MYSQL_ROOT_PASSWORD: <base64-encoded-password>   #manually generated with pwgen
