--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - nextcloud-pvc.yaml
 
 # Services
+- redis-service.yaml
 - mariadb-service.yaml
 - nextcloud-service.yaml
 
@@ -18,6 +19,7 @@ resources:
 - mariadb-secrets.yaml
 
 # Deployments
+- redis-deployment.yaml
 - mariadb-deployment.yaml
 - nextcloud-deployment.yaml
 
