--- a/nextcloud-deployment.yaml.example
+++ b/nextcloud-deployment.yaml.example
@@ -24,6 +24,8 @@ spec:
           ports:
             - containerPort: 80
           env:
+            - name: REDIS_HOST
+              value: redis
             - name: MYSQL_HOST
               value: mariadb 
             - name: MYSQL_DATABASE
